compiling variables